# Responder

./: Audio.qrc  CMakeLists.txt  Images.qrc  QmlMap.qml  README.md  clen.cpp  clen.h  clen_status_window.cpp  clen_status_window.h  jednotka.cpp  jednotka.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  technika.cpp  technika.h  technika_status_window.cpp  technika_status_window.h  vyjezd.cpp  vyjezd.h
